syntax = 'proto3';


import "common.message.proto";
import "reference.model.proto";

message QueryAddressRequest {
    QueryBuilder query_builder = 1;
    optional string search = 2;
    optional string user_id = 3;
    optional string organization_id = 4;
    optional bool include_voided = 5;
    optional RequestContext context = 6;
    optional string type = 7;
    optional string level1 = 8;
    optional string level2 = 9;
    optional string level3 = 10;
    optional string level4 = 11;
    optional string level5 = 12;
    optional string country = 13;
    optional string postal_code = 14;
    optional string start_date_from = 15;
    optional string start_date_to = 16;
    optional string end_date_from = 17;
    optional string end_date_to = 18;
    optional string created_at_from = 19;
    optional string created_at_to = 20;
}

message QueryAddressResponse {
    repeated Address data = 1;
    string metadata = 2; 
}

message CreateAddressRequest {
    QueryBuilder query_builder = 1;
    string user_id = 2;
    bool is_organization_address  = 3;
    string type = 4;
    optional string label = 5;
    string address1 = 6;
    optional string address2 = 7;
    optional string landmark = 8;
    string level1 = 9;
    optional string level2 = 10;
    optional string level3 = 11;
    optional string level4 = 12;
    optional string level5 = 13;
    optional string city_village = 14;
    optional string state_province = 15;
    string country = 16;
    optional string postal_code = 17;
    optional string latitude = 18;
    optional string longitude = 19;
    optional string plus_code = 20;
    optional string start_date = 21;
    optional string end_date = 22;
    optional bool prefered = 23;
    optional string formatted = 24;
    map<string,string> locale_format = 25; 

    optional RequestContext context = 26;

}
message UpdateAddressRequest {
    QueryBuilder query_builder = 1;
    string id = 2;
    optional RequestContext context = 3;
    optional string type = 4;
    optional string label = 5;
    optional string address1 = 6;
    optional string address2 = 7;
    optional string landmark = 8;
    optional string level1 = 9;
    optional string level2 = 10;
    optional string level3 = 11;
    optional string level4 = 12;
    optional string level5 = 13;
    optional string city_village = 14;
    optional string state_province = 15;
    optional string country = 16;
    optional string postal_code = 17;
    optional string latitude = 18;
    optional string longitude = 19;
    optional string plus_code = 20;
    optional string start_date = 21;
    optional string end_date = 22;
    optional bool prefered = 23;
    optional string formatted = 24;
    map<string,string> locale_format = 25;
}

message GetAddressResponse {
    Address data = 1;
    string metadata = 2; 
}